@@ -8,14 +8,15 @@ import java.util.Set;
 
 import org.junit.jupiter.api.Test;
 
+import seedu.address.commons.core.keyword.Keyword;
 import seedu.address.testutil.TaskBuilder;
 
 public class NameContainsKeywordsPredicateTest {
 
     @Test
     public void equals() {
-        Set<String> firstPredicateKeywordSet = Collections.singleton("first");
-        Set<String> secondPredicateKeywordSet = Set.of("first", "second");
+        Set<Keyword> firstPredicateKeywordSet = Collections.singleton(new Keyword("first"));
+        Set<Keyword> secondPredicateKeywordSet = Set.of(new Keyword("first"), new Keyword("second"));
 
         NameContainsKeywordsPredicate firstPredicate = new NameContainsKeywordsPredicate(firstPredicateKeywordSet);
         NameContainsKeywordsPredicate secondPredicate = new NameContainsKeywordsPredicate(secondPredicateKeywordSet);
@@ -47,19 +48,19 @@ public class NameContainsKeywordsPredicateTest {
 
         // One keyword
         predicate = new NameContainsKeywordsPredicate(
-                Collections.singleton("CS2103T"));
+                Collections.singleton(new Keyword("CS2103T")));
         assertTrue(predicate.test(new TaskBuilder().withName("CS2103T tutorial").build()));
 
         // Multiple keywords
-        predicate = new NameContainsKeywordsPredicate(Set.of("CS2103T", "Tutorial"));
+        predicate = new NameContainsKeywordsPredicate(Set.of(new Keyword("CS2103T"), new Keyword("Tutorial")));
         assertTrue(predicate.test(new TaskBuilder().withName("CS2103T Tutorial").build()));
 
         // Only one matching keyword
-        predicate = new NameContainsKeywordsPredicate(Set.of("CS2103T", "CS3240"));
+        predicate = new NameContainsKeywordsPredicate(Set.of(new Keyword("CS2103T"), new Keyword("CS3240")));
         assertTrue(predicate.test(new TaskBuilder().withName("CS3240 Finals").build()));
 
         // Mixed-case keywords
-        predicate = new NameContainsKeywordsPredicate(Set.of("TutoriaL", "cs3240"));
+        predicate = new NameContainsKeywordsPredicate(Set.of(new Keyword("TutoriaL"), new Keyword("cs3240")));
         assertTrue(predicate.test(new TaskBuilder().withName("CS3240 tutorial").build()));
     }
 
@@ -67,11 +68,12 @@ public class NameContainsKeywordsPredicateTest {
     public void test_nameDoesNotContainKeywords_returnsFalse() {
 
         // Non-matching keyword
-        NameContainsKeywordsPredicate predicate = new NameContainsKeywordsPredicate(Set.of("CS3240"));
+        NameContainsKeywordsPredicate predicate = new NameContainsKeywordsPredicate(Set.of(new Keyword("CS3240")));
         assertFalse(predicate.test(new TaskBuilder().withName("CS2103T Tutorial").build()));
 
         // Keywords match description, completion status, deadline and tags, but does not match name
-        predicate = new NameContainsKeywordsPredicate(Set.of("G1", "true", "2022", "CS2103T"));
+        predicate = new NameContainsKeywordsPredicate(Set.of(new Keyword("G1"), new Keyword("true"),
+                new Keyword("2022"), new Keyword("CS2103T")));
         assertFalse(predicate.test(new TaskBuilder()
                 .withName("Complete Tutorial")
                 .withDescription("Finish 3 parts of G1")
